Fix zen mode and fix refine alignment

--- a/assets/css/components/Modules.scss
+++ b/assets/css/components/Modules.scss
@@ -459,6 +459,12 @@
       background-color: transparent;
     }
   }
+
+  &.zen-mode {
+    .module-card-and-link {
+      width: 50rem;
+    }
+  }
 }
 
 
