--- a/assets/css/components/parameters/Refine.scss
+++ b/assets/css/components/parameters/Refine.scss
@@ -79,7 +79,6 @@ button[name="refine-select-all"]:disabled,button[name="refine-select-none"]:disa
   margin-top: .5rem;
   display: flex;
   align-items: center;
-  justify-content: center;
   font-size: 1.3rem;
   line-height: 1.4;
   color: $brand-text--medium;
